# pump-fun-like

./: Anchor.toml  README.md  README_en.md  package.json  pnpm-lock.yaml
clients/ts/src/math/: coin_math.ts  constants.ts  fee_math.ts  math.ts  sol_math.ts
programs/pump-fun-like/: Cargo.toml
programs/pump-fun-like/src/: constants.rs  errors.rs  lib.rs
programs/pump-fun-like/src/instructions/: buy.rs  buy_exact_in.rs  create.rs  initialize_config.rs  mod.rs  sell.rs  sell_exact_out.rs  update_fee.rs
programs/pump-fun-like/src/math/: coin_math.rs  fee_math.rs  math.rs  mod.rs  sol_math.rs  why_round_down_graph.ipynb
programs/pump-fun-like/src/state/: coin.rs  config.rs  mod.rs
tests/: pump-fun-like.ts
