[package]
name = "pump-fun-like"
version = "0.1.0"
description = "Pump Fun Like"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_fun_like"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["metadata", "memo"] }
